--- a/src/app/categorias/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/categorias/inicio-sesion/inicio-sesion.component.html
@@ -5,21 +5,21 @@
   
       <!-- Icon -->
       <div class="fadeIn first">
-        <img src="https://cdn.icon-icons.com/icons2/621/PNG/512/user-male-black-shape_icon-icons.com_56875.png" id="icon" alt="User Icon" />
+        <img src="https://cdn.icon-icons.com/icons2/1508/PNG/512/systemusers_104569.png" id="icon" alt="User Icon" />
       </div>
   
       <!-- Login Form -->
       <form >
         <input type="text"  class="fadeIn second"  placeholder="Usuario">
         <input type="text"  class="fadeIn third"  placeholder="contraseña">
-        <button class="btn btn-success">ingresar</button>
-  
+        
+        <a class="underlineHover" >Ingresar (aun no sirve :)</a>
         
       </form>
       
       <!-- Remind Passowrd -->
       <div id="formFooter">
-        <a class="underlineHover">Olvide contraseña</a>
+        <a class="underlineHover" >Olvide contraseña</a>
       </div>
   
     </div>
